portfolio simulation functions, + username fix + transaction FK constraint fix
